# Plates

./: MVP_LAUNCH_NOTES.md  MVP_TRANSFORMATION_SUMMARY.md  middleware.ts  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/actions/: entities.ts  orgData.ts  organization.ts
app/batches/: layout.tsx  page.tsx
app/clients/: page.tsx
app/login/: page.tsx
app/logout/: route.ts
app/onboarding/: page.tsx
hooks/: useMaterialConfigForType.ts  useTrialDaysLeft.ts
lib/: appTopBarBack.ts  devOnboardingPreview.ts  formatNumbers.ts  i18n.ts  listScreenApprovalSelectStyles.ts  listScreenFilters.ts  onboardingLocal.ts  plateEvents.ts
messages/: he.json
nesting-service/: ARCHITECTURE.md  README.md  pyproject.toml
nesting-service/app/: main.py
nesting-service/app/api/routes/: jobs.py
nesting-service/app/models/: job_models.py
nesting-service/app/schemas/: nesting.py
nesting-service/app/services/: cache_service.py  cavity_fill_service.py  compaction_service.py  free_space_service.py  geometry_service.py  job_service.py  nesting_service.py  placement_service.py  scoring_service.py  validation_service.py
nesting-service/app/utils/: bin_utils.py  debug_metrics.py  polygon_utils.py  transform_utils.py
nesting-service/samples/: sample_job.json
nesting-service/scripts/: run_sample.py
scripts/: clean-next.cjs  copy-svgnest-worker.mjs
server/: requirements-pdf.txt
types/: clients.ts  geometry.ts  index.ts  jspdf-es-min.d.ts  materials.ts  nesting.ts  nestingResults.ts  production.ts  settings.ts  supabase.ts
(+365 files in other folders)
