[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plate-nesting-service"
version = "0.1.0"
description = "Server-side polygon-aware nesting service for PLATE"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "shapely>=2.0.0",
  "pyclipper>=1.3.0.post6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
